# IsoCore

./: .gitignore  isomutator_report.html  pyproject.toml  read_db.py
configs/: logging.json
src/isocore/: main.py
src/isocore/core/: config.py  database.py  schema.sql
src/isocore/ingestors/: hackernews_live.py
src/isocore/processors/: inference.py
src/isomutator/: main.py
src/isomutator/core/: config.py  database.py  log_manager.py  queue_manager.py  schema.sql  strategies.py
src/isomutator/ingestors/: base.py  context_mutator.py  mutator.py
src/isomutator/processors/: judge.py  semantic_judge.py  striker.py
src/isomutator/reporting/: reporter.py
src/isomutator/ui/: dashboard.py
tests/: test_mutator.py  test_queue_manager.py
tests/isomutator/core/: test_financial_report_context_strategy.py  test_logging.py  test_strategies.py
tests/isomutator/ingestors/: test_context_mutator.py  test_hardened_json.py  test_mutator.py
tests/isomutator/processors/: test_async_striker.py  test_semantic_judge.py
tests/isomutator/reporting/: test_reporter.py
